  * 2012-10-15 fimex-0.39.1
    * backport to boost-0.32
    * avoid problems with older gcc or icc when using constant class members
    * improve performance of scaling (use nan-macro rather than function)
  * 2012-09-08 fimex-0.39
    * merging of grids with different resolution (A. Bürger)
    * allow quality-flags and land-masks from external sources (A. Bürger)
    * successfully build on MacOS X/gcc
    * successfully tested with felt-archive files
  * 2012-08-11 fimex-0.38.1
    * compatibility with boost filesystem V3 / boost 1.50
    * adapting to gcc-4.6 / Ubuntu 12.04
  * 2012-07-19 fimex-0.38
    * 2x improved output-performance to netcdf3 files
    * support for ocean_s_coordinate_g1 and *_g2
    * adding IndexedData for convenience
    * introducing DataPtr typedef instead of boost::shared_ptr<Data>
    * adding fiConfigOverview.pl script to simplify configuration
  * 2012-07-05 fimex-0.37.4
    * fixing netcdf-files with 0-terminated strings
    * felt: using undefined-values for undefined levels
  * 2012-05-09 fimex-0.37.3
    * enabling build with nc-config and netcdf-4.1.2 to 4.2 without hdf5
    * enabling build with proj-4.8
    * adding latlon projection in gribwriter
    * fixing bug in gribreader with special options
    * enabling name and standard_name selection of variables in grib_writer
    * fixing WRF earth radius
  * 2012-04-11 fimex-0.37.2
    * using towgs84 parameter of CF-1.7-proposal
    * setting felt earth-figure to simple earth
    * allow overruling of felt-earth-figure in config
  * 2012-03-27 fimex-0.37.1
    * adding preliminar WRF output support
  * 2012-03-27 fimex-0.37
    * fix colon-separated variable-indicators for felt
    * fix axes in vector-interpolation (deg2rad)
    * disabling colon delimiter in wdb-sourcestrings
    * performance-improvements/memory reduction in NcmlCDMReader
    * adding de-accumulation processor
    * synchronize default fill-value with netcdf